<resources>
    <string name="app_name">HappyChat</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="full_name">Full name</string>
    <string name="register">register</string>
    <string name="i_agree_to_the_terms_of_service">I agree to the Terms of Service</string>
    <string name="register_now">Register now.</string>
    <string name="not_a_member">Not a member?</string>
    <string name="re_type_password">Re-type Password</string>


    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id">1826322970822073</string>
    <string name="fb_login_protocol_scheme">fb1826322970822073</string>
    <string name="log_out">Log out</string>
    <string name="people">People</string>
    <string name="my_account">My Account</string>
    <string name="chat_room">ChatRoom</string>
    <string name="display_name">Display name</string>
    <string name="messages">Messages</string>
    <string name="contact">Contact</string>
    <string name="username">Username</string>
    <string name="see_profile">See Profile</string>
    <string name="cancel">Cancel</string>
    <string name="write_a_message">Write a message</string>
    <string name="demo_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  </string>
    <string name="view_profile">View Profile</string>
    <string name="last_message">Last message</string>
    <string name="time">Time</string>
    <string name="status">Status</string>
    <string name="term_of_service">Term of Service</string>
    <string name="feedback">Feedback</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="account_setting">Account setting</string>
    <string name="my_profile">My Profile</string>
    <string name="add_friend">Add Friend</string>
    <string name="marital_status">Marital Status</string>
    <string name="single">Single</string>
    <string name="ho_chi_minh_city">Ho Chi Minh City</string>
    <string name="support_android_gmail_com">support_android@gmail.com</string>
    <string name="address">Address</string>
    <string name="bio">Bio</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="you_have_no_contact">You have no contact</string>
    <string name="upload_image">upload image</string>
    <string name="send_msg">send message</string>
    <string name="app_logo">app logo</string>
    <string name="edit_profile_button">edit profile button</string>
    <string name="icon_profile">icon profile</string>
    <string name="icon_account_setting">icon account setting</string>
    <string name="icon_log_out">icon log out</string>
    <string name="icon_version">icon version</string>
    <string name="icon_feedback">icon feedback</string>
    <string name="icon_terms">icon terms</string>
    <string name="image_message">image message</string>
    <string name="retry">Retry</string>


</resources>
