<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:id="@+id/linearLayout_myAccount_profile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/linear_layout_more_item_high"
            android:background="@drawable/background_clicked">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_account_circle_grey_24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:contentDescription="@string/icon_profile"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_profile"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_myAccount_account_setting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/linear_layout_more_item_high"
            android:background="@drawable/background_clicked">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_settings_grey_24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:contentDescription="@string/icon_account_setting"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/account_setting"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_myAccount_logout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/linear_layout_more_item_high"
            android:background="@drawable/background_clicked">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_logout_grey_24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:contentDescription="@string/icon_log_out"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/log_out"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <View
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:background="@color/grey_400"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:id="@+id/linearLayout_myAccount_version"
            android:layout_width="match_parent"
            android:layout_height="@dimen/linear_layout_more_item_high"
            android:background="@drawable/background_clicked">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_info_outline_grey_24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:contentDescription="@string/icon_version"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/version_1_0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_myAccount_feedback"
            android:layout_width="match_parent"
            android:layout_height="@dimen/linear_layout_more_item_high"
            android:background="@drawable/background_clicked">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_flag_grey_24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:contentDescription="@string/icon_feedback"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/feedback"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_myAccount_terms"
            android:layout_width="match_parent"
            android:layout_height="@dimen/linear_layout_more_item_high"
            android:background="@drawable/background_clicked"
            android:layout_marginBottom="50dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_term_grey_24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:contentDescription="@string/icon_terms"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/term_of_service"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>