<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/light_green_gradient_rect_layer_list">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/imageView_editingProfile_avatar"
                android:src="@drawable/ic_account_circle_grey_40dp"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                app:civ_fill_color="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"/>
            <android.support.v7.widget.AppCompatEditText
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText_editingProfile_full_name"
                android:text="@string/full_name"
                android:textColor="@color/white"
                android:inputType="textNoSuggestions"
                android:textSize="28sp"
                android:fontFamily="sans-serif-light"
                android:layout_below="@id/imageView_editingProfile_avatar"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                app:backgroundTint="@color/white"/>
            <android.support.v7.widget.AppCompatEditText
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText_editingProfile_address"
                android:text="@string/address"
                android:inputType="textNoSuggestions"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_below="@id/editText_editingProfile_full_name"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                app:backgroundTint="@color/white"/>

        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bio"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/light_green_A700"
                android:layout_marginBottom="3dp"/>
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editText_editingProfile_bio"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textNoSuggestions"
                android:text="@string/demo_text"
                android:layout_marginBottom="10dp"
                app:backgroundTint="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/light_green_A700"
                android:layout_marginBottom="3dp"/>
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editText_editingProfile_email"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress|textNoSuggestions"
                android:text="@string/support_android_gmail_com"
                android:layout_marginBottom="10dp"
                app:backgroundTint="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marital_status"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/light_green_A700"
                android:layout_marginBottom="3dp"/>
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editText_editingProfile_marital_status"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:text="@string/single"
                android:layout_marginBottom="10dp"
                app:backgroundTint="@color/black"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>