<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!--<ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/background_login"
        android:scaleType="centerCrop"/>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/edit_text_register_username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_white_rect"
                android:hint="@string/username"
                android:inputType="text"
                android:drawableLeft="@drawable/ic_email"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:drawablePadding="10dp"
                android:textSize="16sp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="30dp"/>

            <EditText
                android:id="@+id/edit_text_register_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_white_rect"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_email"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:drawablePadding="10dp"
                android:textSize="16sp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />

            <EditText
                android:id="@+id/edit_text_register_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_white_rect"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_password"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:drawablePadding="10dp"
                android:textSize="16sp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <EditText
                android:id="@+id/edit_text_register_confir_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_white_rect"
                android:hint="@string/re_type_password"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_password"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:drawablePadding="10dp"
                android:textSize="16sp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <CheckBox
                android:id="@+id/check_box_register_terms"
                android:text="@string/i_agree_to_the_terms_of_service"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="10dp"
                android:textSize="13sp"
                android:layout_marginTop="10dp"
                android:button="@drawable/radio_button"/>

            <Button
                android:id="@+id/button_register_register"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/background_register_button"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/button_register_google_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"/>
            <com.facebook.login.widget.LoginButton
                android:id="@+id/button_register_facebook_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>


    </ScrollView>

</RelativeLayout>