<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_marginTop="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imageView_latestMessage_avatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_account_circle_black_60dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/grey_400"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"/>

        <TextView
            android:id="@+id/textView_latestMessage_name"
            android:text="@string/display_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="180dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_toRightOf="@id/imageView_latestMessage_avatar"
            android:layout_toEndOf="@id/imageView_latestMessage_avatar"
            android:layout_alignTop="@id/imageView_latestMessage_avatar"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/textView_last_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="250dp"
            android:text="@string/last_message"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_below="@id/textView_latestMessage_name"
            android:layout_toRightOf="@id/imageView_latestMessage_avatar"
            android:layout_toEndOf="@id/imageView_latestMessage_avatar"
            android:layout_alignLeft="@id/textView_latestMessage_name"
            android:layout_alignStart="@id/textView_latestMessage_name"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/textView_latestMessage_last_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="100dp"
            android:text="@string/time"
            android:textColor="@color/grey_600"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/textView_latestMessage_name"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>